removed java.locale.provides from bash scripts